@@ -2,13 +2,15 @@ package tgb.btc.rce.sender;
 
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.io.FileUtils;
-import org.apache.logging.log4j.util.Strings;
-import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.telegram.telegrambots.meta.api.methods.AnswerCallbackQuery;
 import org.telegram.telegrambots.meta.api.methods.AnswerInlineQuery;
 import org.telegram.telegrambots.meta.api.methods.GetFile;
-import org.telegram.telegrambots.meta.api.methods.send.*;
+import org.telegram.telegrambots.meta.api.methods.send.SendAnimation;
+import org.telegram.telegrambots.meta.api.methods.send.SendDocument;
+import org.telegram.telegrambots.meta.api.methods.send.SendMessage;
+import org.telegram.telegrambots.meta.api.methods.send.SendPhoto;
 import org.telegram.telegrambots.meta.api.methods.updatingmessages.DeleteMessage;
 import org.telegram.telegrambots.meta.api.methods.updatingmessages.EditMessageText;
 import org.telegram.telegrambots.meta.api.objects.Document;
@@ -17,25 +19,20 @@ import org.telegram.telegrambots.meta.api.objects.Message;
 import org.telegram.telegrambots.meta.api.objects.Update;
 import org.telegram.telegrambots.meta.api.objects.inlinequery.inputmessagecontent.InputTextMessageContent;
 import org.telegram.telegrambots.meta.api.objects.inlinequery.result.InlineQueryResultArticle;
-import org.telegram.telegrambots.meta.api.objects.media.InputMedia;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMarkup;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.ReplyKeyboard;
 import org.telegram.telegrambots.meta.exceptions.TelegramApiException;
 import tgb.btc.library.exception.BaseException;
-import tgb.btc.library.interfaces.service.bean.bot.user.IReadUserService;
 import tgb.btc.rce.bot.RceBot;
-import tgb.btc.rce.enums.Menu;
-import tgb.btc.rce.enums.PropertiesMessage;
-import tgb.btc.rce.service.IUpdateService;
+import tgb.btc.rce.enums.update.UpdateType;
 import tgb.btc.rce.service.keyboard.IKeyboardBuildService;
-import tgb.btc.rce.service.util.IMenuService;
-import tgb.btc.rce.service.util.IMessagePropertiesService;
 import tgb.btc.rce.vo.InlineButton;
 
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.List;
 import java.util.Optional;
 
@@ -43,114 +40,43 @@ import java.util.Optional;
 @Slf4j
 public class ResponseSender implements IResponseSender {
 
-    private RceBot bot;
+    private final RceBot bot;
+    private final IKeyboardBuildService keyboardBuildService;
+    private final String botToken;
 
-    private IReadUserService readUserService;
-
-    private IMenuService menuService;
-
-    private IKeyboardBuildService keyboardBuildService;
-
-    private IMessagePropertiesService messagePropertiesService;
-
-    private IUpdateService updateService;
-
-    @Autowired
-    public void setUpdateService(IUpdateService updateService) {
-        this.updateService = updateService;
-    }
-
-    @Autowired
-    public void setMessagePropertiesService(IMessagePropertiesService messagePropertiesService) {
-        this.messagePropertiesService = messagePropertiesService;
-    }
-
-    @Autowired
-    public void setKeyboardBuildService(IKeyboardBuildService keyboardBuildService) {
-        this.keyboardBuildService = keyboardBuildService;
-    }
-
-    @Autowired
-    public void setMenuService(IMenuService menuService) {
-        this.menuService = menuService;
-    }
-
-    @Autowired
-    public void setReadUserService(IReadUserService readUserService) {
-        this.readUserService = readUserService;
-    }
-
-    @Autowired
-    public void setBot(RceBot bot) {
+    public ResponseSender(RceBot bot, IKeyboardBuildService keyboardBuildService, @Value("${bot.token}") String botToken) {
         this.bot = bot;
+        this.keyboardBuildService = keyboardBuildService;
+        this.botToken = botToken;
     }
 
+    @Override
     public Optional<Message> sendMessage(Long chatId, String text) {
-        return Optional.ofNullable(executeSendMessage(SendMessage.builder()
-                .chatId(chatId.toString())
-                .text(text)
-                .parseMode("html")
-                .build()));
+        return sendMessage(chatId, text, null, null);
     }
 
     @Override
     public Optional<Message> sendMessage(Long chatId, String text, Integer replyToMessageId) {
-        return sendMessage(chatId, text, null, null, replyToMessageId);
+        return sendMessage(chatId, text, null, replyToMessageId);
     }
 
-    public Optional<Message> sendMessageParseNode(Long chatId, String text, String parseNode) {
-        return Optional.ofNullable(executeSendMessage(SendMessage.builder()
-                .chatId(chatId.toString())
-                .text(text)
-                .parseMode(parseNode)
-                .build()));
-    }
-
-
-    public Optional<Message> sendMessageThrows(Long chatId, String text) throws TelegramApiException {
-        return Optional.ofNullable(executeSendMessageThrows(SendMessage.builder()
-                .chatId(chatId.toString())
-                .text(text)
-                .build()));
-    }
-
-    public Optional<Message> sendMessage(Long chatId, String text, Menu menu) {
-        return sendMessage(chatId, text, menuService.build(menu, readUserService.getUserRoleByChatId(chatId)), null);
-    }
-
-    public Optional<Message> sendMessage(Long chatId, PropertiesMessage propertiesMessage, Menu menu) {
-        return sendMessage(chatId, messagePropertiesService.getMessage(propertiesMessage), menu);
-    }
-
+    @Override
     public Optional<Message> sendMessage(Long chatId, String text, ReplyKeyboard replyKeyboard) {
         return sendMessage(chatId, text, replyKeyboard, null);
     }
 
-    public Optional<Message> sendMessage(Long chatId, String text, String parseMode) {
-        return sendMessage(chatId, text, null, parseMode);
-    }
-
-    public Optional<Message> sendMessage(Long chatId, String text, InlineButton... inlineButtons) {
-        return sendMessage(chatId, text, keyboardBuildService.buildInline(List.of(inlineButtons)));
-    }
-
     @Override
-    public Optional<Message> sendMessage(Long chatId, String text, String parseMode, InlineButton... inlineButtons) {
-        return sendMessage(chatId, text, keyboardBuildService.buildInline(List.of(inlineButtons)), parseMode);
+    public Optional<Message> sendMessage(Long chatId, String text, InlineButton... inlineButtons) {
+        return sendMessage(chatId, text, keyboardBuildService.buildInline(List.of(inlineButtons)), null);
     }
 
     @Override
     public Optional<Message> sendMessage(Long chatId, String text, List<InlineButton> buttons) {
-        return sendMessage(chatId, text, keyboardBuildService.buildInline(buttons));
+        return sendMessage(chatId, text, keyboardBuildService.buildInline(buttons), null);
     }
 
     @Override
-    public Optional<Message> sendMessage(Long chatId, String text, ReplyKeyboard replyKeyboard, String parseMode) {
-        return sendMessage(chatId, text, replyKeyboard, parseMode, null);
-    }
-
-    @Override
-    public Optional<Message> sendMessage(Long chatId, String text, ReplyKeyboard replyKeyboard, String parseMode, Integer replyToMessageId) {
+    public Optional<Message> sendMessage(Long chatId, String text, ReplyKeyboard replyKeyboard, Integer replyToMessageId) {
         SendMessage sendMessage = SendMessage.builder()
                 .chatId(chatId.toString())
                 .text(text)
@@ -158,88 +84,83 @@ public class ResponseSender implements IResponseSender {
                 .replyMarkup(replyKeyboard)
                 .parseMode("html")
                 .build();
-        if (Strings.isNotEmpty(parseMode)) sendMessage.setParseMode(parseMode);
-        return Optional.ofNullable(executeSendMessage(sendMessage));
-    }
-
-    @Override
-    public Optional<Message> sendMessage(SendMessage sendMessage) {
         return Optional.ofNullable(executeSendMessage(sendMessage));
     }
 
     private Message executeSendMessage(SendMessage sendMessage) {
         try {
+            sendMessage.setParseMode("html");
             return bot.execute(sendMessage);
         } catch (TelegramApiException e) {
-            log.warn("Не получилось отправить sendMessage: " + sendMessage, e);
             return null;
         }
     }
 
-    private Message executeSendMessageThrows(SendMessage sendMessage) throws TelegramApiException {
-        return bot.execute(sendMessage);
+    @Override
+    public void sendMessageThrows(Long chatId, String text) throws TelegramApiException {
+        bot.execute(SendMessage.builder()
+                .chatId(chatId.toString())
+                .text(text)
+                .parseMode("html")
+                .build());
     }
 
-    public Optional<Message> sendPhoto(Long chatId, String caption, String photo) {
+    @Override
+    public Optional<Message> sendPhoto(Long chatId, String caption, InputFile photo) {
         return sendPhoto(chatId, caption, photo, null);
     }
 
-    public Optional<Message> sendPhoto(Long chatId, String caption, InputFile photo) {
+    @Override
+    public Optional<Message> sendPhoto(Long chatId, String caption, String photo, ReplyKeyboard replyKeyboard) {
+        return sendPhoto(chatId, caption, new InputFile(photo), replyKeyboard);
+    }
+
+    @Override
+    public Optional<Message> sendPhoto(Long chatId, String caption, String photo) {
+        return sendPhoto(chatId, caption, new InputFile(photo), null);
+    }
+
+    @Override
+    public Optional<Message> sendPhoto(Long chatId, String caption, InputFile photo, ReplyKeyboard replyKeyboard) {
         try {
-            return Optional.of(bot.execute(SendPhoto.builder()
+            return Optional.ofNullable(bot.execute(SendPhoto.builder()
                     .chatId(chatId.toString())
                     .caption(caption)
                     .photo(photo)
-                    .build()));
-        } catch (TelegramApiException e) {
-            log.debug("Не получилось отправить фото: chatId=" + chatId + ", caption=" + caption + ", photo=" + photo, e);
-            return Optional.empty();
-        }
-    }
-
-    public Optional<Message> sendPhoto(Long chatId, String caption, String photo, ReplyKeyboard replyKeyboard) {
-        try {
-            return Optional.of(bot.execute(SendPhoto.builder()
-                    .chatId(chatId.toString())
-                    .caption(caption)
-                    .photo(new InputFile(photo))
                     .replyMarkup(replyKeyboard)
                     .parseMode("html")
                     .build()));
         } catch (TelegramApiException e) {
-            log.debug("Не получилось отправить фото: chatId=" + chatId + ", caption=" + caption + ", photo=" + photo, e);
             return Optional.empty();
         }
     }
 
     @Override
     public Message sendAnimation(Long chatId, File file) {
+        return sendAnimation(chatId, new InputFile(file), null, null);
+    }
+
+    @Override
+    public void sendAnimation(Long chatId, String caption, String animation, ReplyKeyboard replyKeyboard) {
+        sendAnimation(chatId, new InputFile(animation), caption, replyKeyboard);
+    }
+
+    @Override
+    public Message sendAnimation(Long chatId, InputFile inputFile, String caption, ReplyKeyboard replyKeyboard) {
         try {
             return bot.execute(SendAnimation.builder()
                     .chatId(chatId.toString())
-                    .animation(new InputFile(file))
+                    .animation(inputFile)
+                    .caption(caption)
+                    .replyMarkup(replyKeyboard)
+                    .parseMode("html")
                     .build());
         } catch (TelegramApiException e) {
-            log.debug("Не получилось отправить анимацию: chatId=" + chatId, e);
             return null;
         }
     }
 
-    public Optional<Message> sendAnimation(Long chatId, String caption, String animation, ReplyKeyboard replyKeyboard) {
-        try {
-            return Optional.of(bot.execute(SendAnimation.builder()
-                    .chatId(chatId.toString())
-                    .caption(caption)
-                    .animation(new InputFile(animation))
-                    .replyMarkup(replyKeyboard)
-                    .build()));
-        } catch (TelegramApiException e) {
-            log.debug("Не получилось отправить анимацию: chatId=" + chatId + ", caption="
-                    + caption + ", animation=" + animation, e);
-            return Optional.empty();
-        }
-    }
-
+    @Override
     public void deleteMessage(Long chatId, Integer messageId) {
         try {
             bot.execute(DeleteMessage.builder()
@@ -250,23 +171,9 @@ public class ResponseSender implements IResponseSender {
         }
     }
 
-    public void sendEditedMessageText(Long chatId, Integer messageId, String text, InlineKeyboardMarkup keyboard) {
-        try {
-            bot.execute(EditMessageText.builder()
-                    .chatId(chatId.toString())
-                    .messageId(messageId)
-                    .text(text)
-                    .replyMarkup(keyboard)
-                            .parseMode("html")
-                    .build());
-        } catch (TelegramApiException e) {
-            log.debug("Не получилось отправить измененное сообщение: chatId" + chatId + ", text=" + text, e);
-        }
-    }
-
     @Override
     public void sendEditedMessageText(Long chatId, Integer messageId, String text) {
-        sendEditedMessageText(chatId, messageId, text, (ReplyKeyboard) null);
+        sendEditedMessageText(chatId, messageId, text, (InlineKeyboardMarkup) null);
     }
 
     @Override
@@ -276,131 +183,79 @@ public class ResponseSender implements IResponseSender {
 
     @Override
     public void sendEditedMessageText(Long chatId, Integer messageId, String text, ReplyKeyboard replyKeyboard) {
+        sendEditedMessageText(chatId, messageId, text, (InlineKeyboardMarkup) replyKeyboard);
+    }
+
+    @Override
+    public void sendEditedMessageText(Long chatId, Integer messageId, String text, InlineKeyboardMarkup keyboard) {
         try {
             bot.execute(EditMessageText.builder()
                     .chatId(chatId.toString())
                     .messageId(messageId)
                     .text(text)
-                    .parseMode("HTML")
-                    .replyMarkup((InlineKeyboardMarkup) replyKeyboard)
+                    .replyMarkup(keyboard)
+                    .parseMode("html")
                     .build());
-        } catch (TelegramApiException e) {
-            log.debug("Не получилось отправить измененное сообщение: chatId" + chatId + ", text=" + text, e);
-        }
-    }
-
-    @Override
-    public Message sendFile(Long chatId, File file) {
-        try {
-            return bot.execute(SendDocument.builder()
-                    .chatId(chatId.toString())
-                    .document(new InputFile(file))
-                    .build());
-        } catch (TelegramApiException e) {
-            log.debug("Не получилось отправить файл: chatId=" + chatId + ", fileName=" + file.getName(), e);
-            return null;
+        } catch (TelegramApiException ignored) {
         }
     }
 
     @Override
     public Message sendFile(Long chatId, String caption, String fileId) {
+        return sendFile(chatId, new InputFile(fileId), caption);
+    }
+
+    @Override
+    public Message sendFile(Long chatId, File file) {
+        return sendFile(chatId, new InputFile(file), null);
+    }
+
+    @Override
+    public Message sendFile(Long chatId, InputFile inputFile) {
+        return sendFile(chatId, inputFile, null);
+    }
+
+    @Override
+    public Message sendFile(Long chatId, InputFile inputFile, String caption) {
         try {
             return bot.execute(SendDocument.builder()
                     .chatId(chatId.toString())
+                    .document(inputFile)
                     .caption(caption)
-                    .document(new InputFile(fileId))
+                    .parseMode("html")
                     .build());
         } catch (TelegramApiException e) {
-            log.debug("Не получилось отправить файл: chatId=" + chatId + ", fileId=" + fileId, e);
             return null;
         }
     }
 
-    public Optional<org.telegram.telegrambots.meta.api.objects.File> execute(GetFile getFile) {
-        try {
-            return Optional.of(bot.execute(getFile));
-        } catch (TelegramApiException e) {
-            log.debug("Не получилось скачать файл:" + getFile.toString());
-            return Optional.empty();
-        }
-    }
-
-    public void downloadFile(String fileId, String localFilePath) {
-        GetFile getFile = new GetFile();
-        getFile.setFileId(fileId);
-        org.telegram.telegrambots.meta.api.objects.File file = execute(getFile)
-                .orElseThrow(() -> new BaseException("Не получилось скачать файл " + fileId + " в " + localFilePath));
-        java.io.File localFile = new java.io.File(localFilePath);
-        try {
-            InputStream is = new URL(file.getFileUrl(bot.getBotToken())).openStream();
-            FileUtils.copyInputStreamToFile(is, localFile);
-        } catch (Exception e) {
-            throw new BaseException("Ошибки при скачивании файла.");
-        }
-    }
-
-    public void downloadFile(Document document, String localFilePath) throws IOException {
+    @Override
+    public void downloadFile(Document document, String localFilePath) throws IOException, URISyntaxException {
         org.telegram.telegrambots.meta.api.objects.File file = getFilePath(document);
-
         java.io.File localFile = new java.io.File(localFilePath);
-        InputStream is = new URL(file.getFileUrl(bot.getBotToken())).openStream();
+        URI uri = new URI(file.getFileUrl(botToken));
+        InputStream is = uri.toURL().openStream();
         FileUtils.copyInputStreamToFile(is, localFile);
     }
 
     private org.telegram.telegrambots.meta.api.objects.File getFilePath(Document document) {
         GetFile getFile = new GetFile();
         getFile.setFileId(document.getFileId());
-        // TODO проверить optional
-        return execute(getFile).get();
+        return execute(getFile);
     }
 
-    @Override
-    public void execute(AnswerInlineQuery answerInlineQuery) {
+    private org.telegram.telegrambots.meta.api.objects.File execute(GetFile getFile) {
         try {
-            bot.execute(answerInlineQuery);
+            return bot.execute(getFile);
         } catch (TelegramApiException e) {
-            log.debug("Не получилось отправить answerInlineQuery: " + answerInlineQuery.toString(), e);
+            throw new BaseException("Не получилось сказать файл: " + getFile, e);
         }
     }
 
     @Override
-    public Message execute(SendDice sendDice) {
+    public void sendAnswerInlineQuery(String inlineQueryId, String title, String description, String messageText) {
         try {
-            return bot.execute(sendDice);
-        } catch (TelegramApiException e) {
-            log.debug("Не получилось отправить sendDice: " + sendDice.toString(), e);
-        }
-        return null;
-    }
-
-    @Override
-    public void sendMedia(Long chatId, List<InputMedia> media) {
-        try {
-            bot.execute(SendMediaGroup.builder()
-                    .chatId(chatId.toString())
-                    .medias(media)
-                    .build());
-        } catch (TelegramApiException e) {
-            log.debug("Не получилось отправить медиа: chatId=" + chatId + ", media.size()=" + media.size());
-        }
-    }
-
-    @Override
-    public void sendInputFile(Long chatId, InputFile inputFile) {
-        try {
-            bot.execute(SendDocument.builder()
-                    .chatId(chatId.toString())
-                    .document(inputFile)
-                    .build());
-        } catch (TelegramApiException e) {
-            log.debug("Не получилось отправить input file: chatId=" + chatId);
-        }
-    }
-
-    @Override
-    public boolean sendAnswerInlineQuery(String inlineQueryId, String title, String description, String messageText) {
-        try {
-            return bot.execute(AnswerInlineQuery.builder().inlineQueryId(inlineQueryId)
+            bot.execute(AnswerInlineQuery.builder().inlineQueryId(inlineQueryId)
                     .result(InlineQueryResultArticle.builder()
                             .id(inlineQueryId)
                             .title(title)
@@ -410,30 +265,15 @@ public class ResponseSender implements IResponseSender {
                             .description(description)
                             .build())
                     .build());
-        } catch (TelegramApiException e) {
-            log.trace("Не получилось отправить inlineQuery.");
-            return false;
+        } catch (TelegramApiException ignored) {
         }
-    }
-
-    @Override
-    public boolean sendAnswerInlineQuery(String inlineQueryId, String title) {
-        return sendAnswerInlineQuery(inlineQueryId, title, null, null);
     }
 
     @Override
     public void deleteCallbackMessageIfExists(Update update) {
+        Long chatId = UpdateType.getChatId(update);
         if (update.hasCallbackQuery())
-            deleteMessage(updateService.getChatId(update), update.getCallbackQuery().getMessage().getMessageId());
-    }
-
-    @Override
-    public void deleteCallbackMessageButtonsIfExists(Update update) {
-        if (update.hasCallbackQuery()) {
-            String text = update.getCallbackQuery().getMessage().getText();
-            deleteMessage(updateService.getChatId(update), update.getCallbackQuery().getMessage().getMessageId());
-            sendMessage(updateService.getChatId(update), text);
-        }
+            deleteMessage(chatId, update.getCallbackQuery().getMessage().getMessageId());
     }
 
     @Override
@@ -444,9 +284,7 @@ public class ResponseSender implements IResponseSender {
                     .text(text)
                     .showAlert(showAlert)
                     .build());
-        } catch (TelegramApiException e) {
-            log.error("Не получилось отправить answerCallbackQuery. text={}", text);
-            log.error("Ошибка отправки answerCallbackQuery", e);
+        } catch (TelegramApiException ignored) {
         }
     }
 
