@@ -52,6 +52,6 @@ public class MenuService implements IMenuService {
             return keyboardBuildService.buildReply(menu.getNumberOfColumns(), iMenu.build(userRole), iMenu.isOneTime());
         return keyboardBuildService.buildReply(menu.getNumberOfColumns(), menu.getTextCommands().stream()
                 .map(command -> ReplyButton.builder().text(commandService.getText(command)).build())
-                .collect(Collectors.toList()), false);
+                .toList(), false);
     }
 }
